@@ -1,3 +1,7 @@
+Thu Dec  4 01:22:41 2008  Tadayoshi Funaba  <tadf@dotrb.org>
+
+	* complex.c (f_signbit): NaN may be signed value.
+
 Wed Dec  3 23:59:32 2008  Tanaka Akira  <akr@fsij.org>
 
 	* process.c (EXEC_OPTION_DUP2_CHILD): defined.
